Corrected landing page - media query to avoid awkward alignment

--- a/styles/category-style/grid_caption_hover.css
+++ b/styles/category-style/grid_caption_hover.css
@@ -20,7 +20,7 @@
 	min-width: 160px;
 	max-width: 160px;
 	min-height: 160px;
-	margin: 20px 5px 20px 5px;
+	margin: 20px;
 	padding: 10px;
 	text-align: left;
 	position: relative;
